@@ -2,6 +2,8 @@ Improvements :
 
 * Added IECoreMaya.DateTimeParameterHandler
 
+* Implemented uniform array parameters in IECoreGL shaders (accepting IntVectorData, FloatVectorData, etc)
+
 Bug Fixes :
 
 * Fixed a bug in python/IECoreMaya/PresetsOnlyParameterUI.py, which was preventing the ui updating for V2f, V3f and other vector type parameters
